# handbook

./: .gitignore  Makefile  README.md  gendoc.sh  go.mod  go.sum  result.html
Arch/: QA.md  README.md
Misc/fastapi/: pyproject.toml
Misc/fastapi/default/: 0_20210609140413_init.sql
Misc/fastapi/pyadmin/: config.py
Misc/fastapi/pyadmin/apps/: schema.py
Misc/fastapi/web/: package-lock.json
Python/: README.md  async_thread_pool.py  pyproject.toml
Python/algorithm/: sort.py
Python/algorithm/sequence/: string_.py
Python/algorithm/tree/: binarytree.py
Python/cookbook/: logger.py
Python/cookbook/500lines/: add_prefix.py  executor.py
Python/cookbook/asyncref/: __init__.py  adapter.py  executor.py  threadpool.py  wrap.py
Python/cookbook/concurrent/: lock2.py  lock3.py
Python/cookbook/data/: struct.py
Python/cookbook/design/: 浏览器的历史记录.py
Python/cookbook/distribute/: README.md
Python/cookbook/micro_service/: README.md
Python/cookbook/microkit/: build  go.sum
Python/cookbook/network/: TODO.md  asyn_tcp_client.py  asyn_tcp_server.py  asyn_udp_client.py  asyn_udp_server.py  httpserver.py  socket.py
Python/cookbook/os/: notify.py  platform.py
Python/cookbook/pyup/: _cli.py  initialize.py
Python/cookbook/server/: asgi应用.py  异步TCP服务.py
Python/cookbook/spider/: by_aiohttp_bs4.py  by_ruia.py
Python/cookbook/testlib/: func.c  func.pxd  func.py
Python/cookbook/功能应用/: bookserver.py  事件驱动模型.py  更高级的httpserver.py  简易的服务器.py
Python/cookbook/系统设计/: 仓库管理系统.py  浏览器的历史记录.py  超市模拟.py
Python/cookbook/设计模式/: 享元模式.py  原型模式.py  发布订阅模式.py  命令模式.py  建造者模式.py  策略模式.py  观察者模式.py  解释器模式.py  责任链模式.py  适配器模式.py
Python/design/: cache.py  任务调度.py  停车场系统.py  线程管理器.py
Python/design/plugins/: __init__.py  plugin1.py
Python/scripts/: add_prefix.py  bigfile_reader.py  httpserver_x.py  index.html  pip_tool.py  sendemail.py  server_simple.py  simplehandler.py  spider_by_ruia.py  to_snippet.py  url_importer.py
Python/scripts/os/: __init__.py  cliapp.py  istat.py
Python/scripts/pyup/: __init__.py  generate.py
Python/scripts/sanicx/: __init__.py  app.py  dependant.py  globals.py  middleware.py
Python/scripts/server/: tcp_async_client.py  tcp_async_server.py  tcp_selector_server.py  tcp_socket_server.py
Python/scripts/spider/: result.json
Python/sdk/etcd/: etcd.py
Python/server/: http_server.py  https_server.py
Python/server/cert/: ca-cert.srl  server-req.csr
Python/spider/: mall.csv  playwright_spider.py
Python/src/: file.py
Python/templates/fastapi/: .dev.env  aerich.ini
Python/test/test_script/: test_server.py
Python/tools/profile/: README.md
Python/数据类型/: graph.py  trie.py  字典树及其应用.py
Rust/: Cargo.toml  README.md
Rust/daily/: 01-数据结构.md  02-流程控制.md  02-面向对象.md  03-面向对象.md  04-并发编程.md
Rust/examples/: chat-client.rs  chat-server.rs  ipsniffer.rs  rsnake.rs
Rust/micro_service/: Cargo.toml  README.md
Rust/micro_service/src/: main.rs
Rust/scripts/pyasgi/: Cargo.toml
Rust/src/: lib.rs
Rust/src/algo/: tree.rs
Rust/src/boost/: mod.rs  unsafefn.rs
Rust/src/chat/: client.rs  server.rs
Rust/src/cook/: algo.rs
Rust/src/data/: base.rs  concurrent.rs  feature.rs  mod.rs  structure.rs
Rust/src/html/: parser.rs
Rust/src/ipsniffer/: ipsniffer.rs  mod.rs
Rust/src/os/: cli.rs  event.rs  mod.rs
Rust/src/rand/: basic.rs
Rust/src/rsnake/: game.rs  mod.rs  snake.rs
Rust/src/server/: http.rs  mod.rs  pool.rs  rocket.rs
Rust/wasi_hello_world/: README.md
Rust/wasi_hello_world/src/: main.rs
(+925 files in other folders)
