[tool.poetry]
name = "handbook"
version = "0.1.0"
description = ""
authors = ["wwqdrh <huiloademail@163.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.8.0"
yagmail = "^0.14.260"
playwright = "^1.17.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
