[package]
name = "cookbook"
version = "0.1.0"
authors = ["wwqdrh <huiloademail@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
piston_window = "0.122.0"


[[example]]
name = "rsnake"
path = "examples/rsnake.rs"

[[example]]
name = "ipsniffer"
path = "examples/ipsniffer.rs"

[[example]]
name = "chat-server"
path = "examples/chat-server.rs"

[[example]]
name = "chat-client"
path = "examples/chat-client.rs"
