[package]
authors = ["wwqdrh <huiloademail@163.com>"]
edition = "2018"
name = "micro_service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
serde_json = "1.0.64"
url = "2.2.2"