[package]
authors = ["wwqdrh <huiloademail@163.com>"]
edition = "2018"
name = "pyasgi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "pyasgi"

[dependencies]
futures-util = {version = "0.3", default-features = false}
hyper = {version = "0.14", features = ["full"]}
once_cell = "1.7"
pyo3 = {version = "0.13.2", default-features = false, features = [
  "macros",
  "extension-module",
  "nightly",
]}
pyo3-asyncio = {version = "0.13.0", features = ["async-std-runtime"]}
redis = {git = "https://github.com/mitsuhiko/redis-rs", default-features = false, features = [
  "tokio-comp",
]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
